# luestilo_teste

./: .coverage  .dockerignore  Dockerfile  compose.yaml  database.db  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
luestilo_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
luestilo_api/routers/: auth.py  clients.py  messages.py  orders.py  products.py
migrations/: env.py
migrations/versions/: 1c2dd1df80c1_fix_orderproduct_relationship_init.py  898e26d434e9_add_is_active_for_soft_delete_to_order.py  c9fb0db38c03_create_other_tables_and_adding_.py  ca1f6f057cb6_verificação_de_sincronização_do_schema.py  ce6a0a1077a1_creating_user.py  d5db45810289_adding_soft_delete.py  f5af6ea50c9b_add_whatsapp_fields_to_client_model.py  fcfced50bbe8_creating_clients_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
